# time-series-forecast

./: .gitignore  setup.cfg  setup.sh
evaluation/: bursts.py  extract_mae.py  image.py  values_cdf.py
forecast/: read_xml.py  train_transformer.py
forecast/data/: dataset.py  loader.py  prophet.py
forecast/model/: autoformer.py  deepar.py  informer.py  vanilla.py
forecast/utils/: cmdparser.py  evaluation.py
plots/: plot_bar.py  plot_diff.py  plot_err.py  plot_err.sh  plot_mae.py  plot_mae.sh  plot_mae_cdf.py  plot_mae_cdf.sh  plot_missing.py  plot_raw.py
tests/: baseline_forecast.py  create_dataset.py  deepar_forecast.py  gan_predictor.py  none_forecast.py  pyfc.py  reshape_test.py  run_pyfc.sh  test_arima.py  test_autoarima.py  test_autoarina.sh  test_autoformer.py  test_autoformer.sh  test_convlstm.py  test_convlstm.sh  test_deepar.py  test_deepar.sh  test_deepar_fc.sh  test_informer.py  test_models.py  test_models.sh  test_naive.py  test_prophet.py  test_prophet.sh  test_transformer_fc.sh  test_tst.py  test_vanilla.py  test_vanilla.sh  test_vanilla_fc.sh  test_vanilla_gru.py  test_vanilla_lstm.py  train_models.py  train_models.sh  transformer_forecast.py  vanilla_forecast.py
training/: normalization.py  train.sh  train_arima.py  train_arima.sh  train_burst.py  train_convlstm.py  train_convlstm.sh  train_cross.py  train_cross.sh  train_gru.py  train_gru.sh  train_lstm.py  train_lstm.sh  train_prophet.py
training/models/: __init__.py  modeling_arima.py  modeling_convlstm.py  modeling_crossformer.py  modeling_gru.py  modeling_lstm.py  modeling_prophet.py
(+5 files in other folders)
