[metadata]
name = forecast
version = 0.0.1
author = Leyang Xue 
author_email = leyang.xue@ed.ac.uk
description = Time series forecasting utility
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/drunkcoding/time-series-forecast
project_urls =
    Bug Tracker = https://github.com/drunkcoding/time-series-forecast/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8